# study

./: .gitignore
L1/T1/: T1.vcxproj  main.cpp
L1/T1/T1/x64/Debug/: T1.exe.recipe  T1.ilk  vc143.idb
L1/T2/: T2.sln  T2.vcxproj
L1/T2/T2/x64/Debug/: T2.exe.recipe  T2.ilk  vc143.idb
L1/T3/: T3.sln  T3.vcxproj  main.cpp
L1/T3/T3/x64/Debug/: T3.exe.recipe  T3.ilk  vc143.idb
L2/T1/: T1.sln  main.cpp
L2/T1/T1/x64/Debug/: T1.exe.recipe  T1.ilk  main.obj.enc  vc143.idb
L2/T2/: T2.sln  main.cpp
L2/T2/T2/x64/Debug/: T2.exe.recipe  T2.ilk  vc143.idb
L3/T1/: T1.sln  in.txt  main.cpp
L3/T1/T1/x64/Debug/: T1.exe.recipe  T1.ilk  (+1 more)
L3/T2/: T2.sln  T2.vcxproj  main.cpp
L4/T1/: T1.sln  T1.vcxproj  main.cpp
L4/T2/: T2.sln  T2.vcxproj
L4/T3/: T3.sln  T3.vcxproj
L5/T1/: T1.sln  T1.vcxproj
L5/T2/: CounterClass.cpp  T2.vcxproj
L5/T3/: Figure.h  Quadrangle.cpp  Quadrangle.h  Rectangle.cpp  Rhomb.cpp  Square.cpp  T3.sln  main.cpp
L6/T2/: T2.sln  T2.vcxproj
L7/T1/: T1.sln  T1.vcxproj
L7/T2/: EquilateralTriangle.cpp  FigureCreationException.cpp  IsoscelesTriangle.cpp  Square.cpp  T3.vcxproj  T3.vcxproj.filters  Triangle.h
L8/T1/: T1.sln  main.cpp
L8/T2/: T2.sln  main.cpp
L9/T1/: CMakeLists.txt
L9/T2/: CMakeLists.txt  RectengularTriangle.h
PRODprog/L1/T1/: Source.cpp  T1.sln  T1.vcxproj
PRODprog/L2/T1/: Source.cpp  T1.sln  T1.vcxproj
PRODprog/L2/T2/: Source.cpp  T2.sln  T2.vcxproj
PRODprog/L3/T1/: CMakeLists.txt  main.cpp
PRODprog/L3/T2/: CMakeLists.txt  main.cpp
PRODprog/L4/T1/: Source.cpp  T1.sln  T1.vcxproj
PRODprog/L4/T2/: Source.cpp  T2.sln  T2.vcxproj
PRODprog/L4/T3/: Source.cpp  T3.sln  T3.vcxproj
PRODprog/L5/T1/: Source.cpp  T1.sln  T1.vcxproj
PRODprog/L5/T2/: Source.cpp  T2.sln  T2.vcxproj
PRODprog/L5/T3/: T3.sln  T3.vcxproj
PRODprog/L6/T1/: Source.cpp  T1.sln  T1.vcxproj
PRODprog/L6/T2/: Source.cpp  T2.sln  T2.vcxproj
PRODprog/L7/T1/: Source.cpp  T1.sln  T1.vcxproj
PRODprog/L7/T2/: T2.sln  T2.vcxproj
PRODprog/L8/T1/: Source.cpp  T1.sln  T1.vcxproj
PRODprog/L8/T2/: Source.cpp  T2.sln  T2.vcxproj
Proshlie zanatia/L1/T1/: T1.sln
Proshlie zanatia/L1/T2/: main.cpp
Proshlie zanatia/L2/T1/: T1.vcxproj  main.cpp
Proshlie zanatia/L2/T2/: T2.vcxproj  main.cpp
Proshlie zanatia/L3/T1/: T1.vcxproj  main.cpp  out.txt
Proshlie zanatia/L3/T2/: main.cpp
Proshlie zanatia/L4/T2/: main.cpp
Proshlie zanatia/L4/T3/: main.cpp
Proshlie zanatia/L5/T1/: T1.vcxproj.filters  main.cpp  math.h  math_func.cpp
Proshlie zanatia/L5/T2/: T2.sln  T2.vcxproj.filters  counter.h  main.cpp
Proshlie zanatia/L5/T3/: EquilateralTriangle.cpp  IsoscelesTriangle.cpp  Parallelogram.cpp  Square.h  T3.vcxproj  T3.vcxproj.filters  Triangle.cpp
Proshlie zanatia/L6/T1/: T1.sln  T1.vcxproj  main.cpp
Proshlie zanatia/L6/T2/: main.cpp
Proshlie zanatia/L7/T1/: main.cpp
Proshlie zanatia/L7/T2/: FigureCreationException.h  Parallelogram.h  Quadrangle.cpp  Rectangle.cpp  Rectangle.h  RectengularTriangle.cpp  Rhomb.cpp  Triangle.cpp  main.cpp
Proshlie zanatia/L8/T1/: T1.vcxproj
Proshlie zanatia/L8/T2/: T2.vcxproj
Proshlie zanatia/L9/T1/: source.cpp
Proshlie zanatia/L9/T2/: EquilateralTriangle.h  IsoscelesTriangle.h  RectengularTriangle.cpp  Rhomb.h
Qt pr/HalloGr/: CMakeLists.txt  mainwindow.ui
Qt pr/L10/PreTCPclient/: mainwindow.cpp  tcpclient.cpp  tcpclient.h
Qt pr/L2/: CMakeLists.txt  main.cpp
Qt pr/L3/: CMakeLists.txt  coninfwin.cpp  coninfwin.h  coninfwin.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
Qt pr/L4/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Qt pr/L5_take2/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  stopwatch.cpp  stopwatch.h
Qt pr/L8_take2/: CMakeLists.txt  database.cpp  database.h  dbdata.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Qt pr/L9/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  udpworker.cpp  udpworker.h
Shabloni/L1/T1/: Source.cpp  T1.sln  T1.vcxproj  sql_query_builder.h
Shabloni/L1/T2/: Source.cpp  T2.sln  T2.vcxproj  T2.vcxproj.filters  sql_query_builder.h
Shabloni/L2/T1/: Source.cpp  T1.sln  T1.vcxproj
Shabloni/L2/T2/: Source.cpp  T2.sln  T2.vcxproj
Shabloni/L3/T1/: Source.cpp  T1.sln  T1.vcxproj  log.txt
Shabloni/L3/T2/: Source.cpp  T2.sln  T2.vcxproj
Shabloni/L3/T3/: Source.cpp  T3.sln  T3.vcxproj
Shabloni/L4/T1/: Source.cpp  T1.sln  T1.vcxproj
Shabloni/L4/T2/: Source.cpp  T2.sln  T2.vcxproj  output.txt
UnitTest1/: UnitTest1.cpp  UnitTest1.vcxproj
mnogopotochnost/L1/T1/: Project1.sln  Project1.vcxproj  main.cpp
mnogopotochnost/L1/T2/: Source.cpp  T2.sln  T2.vcxproj
mnogopotochnost/L2/T1/: Source.cpp  T1.sln  T1.vcxproj
mnogopotochnost/L2/T2/: Source.cpp  T2.sln  T2.vcxproj
mnogopotochnost/L2/T3/: Source.cpp  T3.sln  T3.vcxproj
mnogopotochnost/L3/T1/: Source.cpp  T1.sln  T1.vcxproj
mnogopotochnost/L3/T2/: Source.cpp  T2.sln  T2.vcxproj
mnogopotochnost/L4/TCP client_server/: CMakeLists.txt  TCP client_server.h  tcp_client client.cpp  tcp_server server.cpp
Алгоритмы и структуры данных/Введение в алгоритмическую сложность. Бинпоиск/: Задание 1.txt
Тестирование и Unit-тесты/: extended_array.h  main.cpp  Тестирование и Unit-тесты.sln  Тестирование и Unit-тесты.vcxproj  Тестирование и Unit-тесты.vcxproj.filters
(+102 files in other folders)
