cmake_minimum_required(VERSION 3.22.0)

project(MySecondCMakeProject)

add_executable(MySecondCMakeProject
				main.cpp
				EquilateralTriangle.cpp
				Figure.cpp		
				IsoscelesTriangle.cpp
				Parallelogram.cpp
				Quadrangle.cpp
				Rectangle.cpp
				RectengularTriangle.cpp
				Rhomb.cpp
				Square.cpp
				Triangle.cpp
)
